ENH: Cleaned the Annotation module structure.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14552 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -1,4 +1,8 @@
-
+#-----------------------------------------------------------------------
+#
+# SETUP
+#
+#-----------------------------------------------------------------------
 # Module name (usually identique to the directory name)
 SET(qt_module_name "Annotation")
 
@@ -12,44 +16,55 @@ SET(qt_module_include_directories
   ${CMAKE_CURRENT_SOURCE_DIR}/MRML
   )
 
-# DisplayableManager classes
+#-----------------------------------------------------------------------
+#
+# DISPLAYABLE MANAGERS
+#
+#-----------------------------------------------------------------------
 SET(DisplayableManager_SRCS
-  vtkMRMLAnnotationTextDisplayableManager.cxx
-  vtkMRMLAnnotationFiducialDisplayableManager.cxx
-  vtkMRMLAnnotationAngleDisplayableManager.cxx
+  MRMLDisplayableManager/vtkMRMLAnnotationTextDisplayableManager.cxx
+  MRMLDisplayableManager/vtkMRMLAnnotationFiducialDisplayableManager.cxx
+  MRMLDisplayableManager/vtkMRMLAnnotationAngleDisplayableManager.cxx
+  MRMLDisplayableManager/vtkMRMLAnnotationDisplayableManager.cxx
+  MRMLDisplayableManager/vtkMRMLAnnotationClickCounter.cxx
+  )
+  
+#-----------------------------------------------------------------------
+#
+# LOGIC
+#
+#-----------------------------------------------------------------------
+SET(Logic_SRCS
+  Logic/vtkSlicerAnnotationModuleLogic.cxx
+  Logic/vtkSlicerAnnotationModuleLogic.h
   )
 
-# Create the instantiator for DisplayableManager classes.
-SET(VTK_USE_INSTANTIATOR_NEW 1)
-VTK_MAKE_INSTANTIATOR3("qSlicer${qt_module_title}ModuleInstantiator"
-  DisplayableManagerInstantiator_SRCS
-  "${DisplayableManager_SRCS}"
-  "${qt_module_export_directive}"
-  ${CMAKE_CURRENT_BINARY_DIR}
-  "qSlicer${qt_module_title}ModuleExport.h")
+#-----------------------------------------------------------------------
+#
+# GUI
+#
+#-----------------------------------------------------------------------
+SET(GUI_SRCS
+  GUI/qSlicerAnnotationModuleWidget.cxx
+  GUI/qSlicerAnnotationModuleWidget.h
+  GUI/qSlicerAnnotationModuleAnnotationPropertyDialog.cxx
+  GUI/qSlicerAnnotationModuleAnnotationPropertyDialog.h
+  GUI/qSlicerAnnotationModuleReportDialog.cxx
+  GUI/qSlicerAnnotationModuleReportDialog.h
+  GUI/qSlicerAnnotationModulePushButton.cxx
+  GUI/qSlicerAnnotationModulePushButton.h
+  GUI/qSlicerAnnotationModuleScreenShotDialog.cxx
+  GUI/qSlicerAnnotationModuleScreenShotDialog.h
+  GUI/qSlicerAnnotationModuleImageUtil.cxx
+  GUI/qSlicerAnnotationModuleImageUtil.h
+  )
 
-# Source files
-SET(qt_module_SRCS
-  ${DisplayableManager_SRCS}
-  ${DisplayableManagerInstantiator_SRCS}
-  qSlicerAnnotationModule.cxx
-  qSlicerAnnotationModule.h
-  vtkSlicerAnnotationModuleLogic.cxx
-  vtkSlicerAnnotationModuleLogic.h
-  qSlicerAnnotationModuleWidget.cxx
-  qSlicerAnnotationModuleWidget.h
-  qSlicerAnnotationModuleAnnotationPropertyDialog.cxx
-  qSlicerAnnotationModuleAnnotationPropertyDialog.h
-  qSlicerAnnotationModuleReportDialog.cxx
-  qSlicerAnnotationModuleReportDialog.h
-  qSlicerAnnotationModulePushButton.cxx
-  qSlicerAnnotationModulePushButton.h
-  qSlicerAnnotationModuleScreenShotDialog.cxx
-  qSlicerAnnotationModuleScreenShotDialog.h
-  qSlicerAnnotationModuleImageUtil.cxx
-  qSlicerAnnotationModuleImageUtil.h
-  vtkMRMLAnnotationDisplayableManager.cxx
-  vtkMRMLAnnotationDisplayableManager.h
+#-----------------------------------------------------------------------
+#
+# DEPRECATED CLASSES (do not get compiled)
+#
+#-----------------------------------------------------------------------
+SET(DEPRECATED_SRCS
   vtkSlicerAnnotationRulerManager.cxx
   vtkSlicerAnnotationRulerManager.h
   vtkSlicerAnnotationAngleManager.cxx
@@ -60,10 +75,39 @@ SET(qt_module_SRCS
   vtkSlicerAnnotationSplineManager.h
   vtkSlicerAnnotationBidimensionalManager.cxx
   vtkSlicerAnnotationBidimensionalManager.h
-  vtkMRMLAnnotationClickCounter.cxx
-  vtkMRMLAnnotationClickCounter.h
   )
 
+
+# Create the instantiator for DisplayableManager classes.
+SET(VTK_USE_INSTANTIATOR_NEW 1)
+VTK_MAKE_INSTANTIATOR3("qSlicer${qt_module_title}ModuleInstantiator"
+  DisplayableManagerInstantiator_SRCS
+  "${DisplayableManager_SRCS}"
+  "${qt_module_export_directive}"
+  ${CMAKE_CURRENT_BINARY_DIR}
+  "qSlicer${qt_module_title}ModuleExport.h"
+  )
+
+#-----------------------------------------------------------------------
+#
+# ALL SOURCE FILES TOGETHER
+#
+#-----------------------------------------------------------------------
+SET(qt_module_SRCS
+  ${DisplayableManager_SRCS}
+  ${DisplayableManagerInstantiator_SRCS}
+  ${Logic_SRCS}
+  ${GUI_SRCS}
+  #${DEPRECATED_SRCS}
+  qSlicerAnnotationModule.cxx
+  qSlicerAnnotationModule.h
+  )
+
+#-----------------------------------------------------------------------
+#
+# WIDGETS
+#
+#-----------------------------------------------------------------------
 SET(MODULE_WIDGETS_SRCS
   #vtkAnnotationAngleWidget.cxx
   #vtkAnnotationAngleWidget.h
@@ -76,6 +120,11 @@ FOREACH(file ${MODULE_WIDGETS_SRCS})
   LIST(APPEND qt_module_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/Widgets/${file})
 ENDFOREACH()
 
+#-----------------------------------------------------------------------
+#
+# MRML
+#
+#-----------------------------------------------------------------------
 SET(MODULE_MRML_SRCS
   vtkMRMLAnnotationNode.cxx
   vtkMRMLAnnotationNode.h
@@ -126,38 +175,52 @@ FOREACH(file ${MODULE_MRML_SRCS})
   LIST(APPEND qt_module_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/MRML/${file})
 ENDFOREACH()
 
-# Headers that should run through moc
+#-----------------------------------------------------------------------
+#
+# MOC HEADERS
+#
+#-----------------------------------------------------------------------
 SET(qt_module_MOC_SRCS
   qSlicerAnnotationModule.h
-  qSlicerAnnotationModuleWidget.h
-  qSlicerAnnotationModuleAnnotationPropertyDialog.h
-  qSlicerAnnotationModuleReportDialog.h
-  qSlicerAnnotationModulePushButton.h
-  qSlicerAnnotationModuleScreenShotDialog.h
+  GUI/qSlicerAnnotationModuleWidget.h
+  GUI/qSlicerAnnotationModuleAnnotationPropertyDialog.h
+  GUI/qSlicerAnnotationModuleReportDialog.h
+  GUI/qSlicerAnnotationModulePushButton.h
+  GUI/qSlicerAnnotationModuleScreenShotDialog.h
   )
 
-# UI files
+#-----------------------------------------------------------------------
+#
+# RESOURCES
+#
+#-----------------------------------------------------------------------
 SET(qt_module_UI_SRCS
   Resources/UI/qSlicerAnnotationModule.ui
   Resources/UI/qSlicerAnnotationModuleAnnotationPropertyDialog.ui
   Resources/UI/qSlicerAnnotationModuleReportDialog.ui
   Resources/UI/qSlicerAnnotationModuleScreenShotDialog.ui
-)
+  )
  
 # Resources
 SET(qt_module_resources
   Resources/qSlicerAnnotationModule.qrc
 )
 
+#-----------------------------------------------------------------------
+#
+# LINK TARGETS
+#
+#-----------------------------------------------------------------------
 # Additional Target libraries
 SET(qt_module_target_libraries
-  #${KWWidgets_LIBRARIES}
-  #${ITK_LIBRARIES}
-  #CommandLineModule
   qSlicerBaseQTCore
-  #Measurements
-  )
+)
 
+#-----------------------------------------------------------------------
+#
+# BUILD QTMODULE
+#
+#-----------------------------------------------------------------------
 Slicer3_build_qtmodule(
   NAME ${qt_module_name}
   TITLE ${qt_module_title}
@@ -168,8 +231,13 @@ Slicer3_build_qtmodule(
   UI_SRCS ${qt_module_UI_SRCS}
   TARGET_LIBRARIES ${qt_module_target_libraries}
   RESOURCES ${qt_module_resources}
-  )
+)
 
+#-----------------------------------------------------------------------
+#
+# TESTING
+#
+#-----------------------------------------------------------------------
 if(BUILD_TESTING)
   ADD_SUBDIRECTORY(Testing/Cxx)
 endif(BUILD_TESTING)
