ENH: Fiducials and sticky node work now in the Annotation module.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14567 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -24,6 +24,7 @@ SET(qt_module_include_directories
 SET(DisplayableManager_SRCS
   MRMLDisplayableManager/vtkMRMLAnnotationTextDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationFiducialDisplayableManager.cxx
+  MRMLDisplayableManager/vtkMRMLAnnotationStickyDisplayableManager.cxx  
   MRMLDisplayableManager/vtkMRMLAnnotationAngleDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationClickCounter.cxx
