ENH: fixed some memory leaks, added spline functionality (not fully there yet), sticky node icons should work now on Unix
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14568 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(DisplayableManager_SRCS
   MRMLDisplayableManager/vtkMRMLAnnotationFiducialDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationStickyDisplayableManager.cxx  
   MRMLDisplayableManager/vtkMRMLAnnotationAngleDisplayableManager.cxx
+  MRMLDisplayableManager/vtkMRMLAnnotationSplineDisplayableManager.cxx  
   MRMLDisplayableManager/vtkMRMLAnnotationDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationClickCounter.cxx
   )
