COMP: MAC: remove environ hack and enable link flag flag that gives access to actual environment (previously the os.environ would not show real environment because the environ static variable was faked with an empty array)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14573 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/SuperBuild/python_make_step.cmake.in
+++ b/SuperBuild/python_make_step.cmake.in
@@ -1,7 +1,13 @@
 
 if(UNIX)
+
+  set(cmd "make")
+  if (APPLE)
+    set(cmd "/bin/sh -c 'export LDFLAGS=-undefined\ dynamic_lookup; make'")
+  endif (APPLE)
+
   EXECUTE_PROCESS( 
-    COMMAND make
+    COMMAND ${cmd}
     WORKING_DIRECTORY "@python_base@"
     RESULT_VARIABLE rv
     )
