ENH: Ruler and spline annotations can now be placed. After spline placement, it is not possible to exit interactive mode..
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14575 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(DisplayableManager_SRCS
   MRMLDisplayableManager/vtkMRMLAnnotationStickyDisplayableManager.cxx  
   MRMLDisplayableManager/vtkMRMLAnnotationAngleDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationSplineDisplayableManager.cxx  
+  MRMLDisplayableManager/vtkMRMLAnnotationRulerDisplayableManager.cxx   
   MRMLDisplayableManager/vtkMRMLAnnotationDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationClickCounter.cxx
   )
