COMP: Python - Module freesurfer, mrml, mrmlLogic, remoteio, teem and vtk are not anymore submodule of slicer
Only logic module is a sub-module of slicer

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14579 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/Python/CMakeLists.txt
+++ b/Base/Python/CMakeLists.txt
@@ -8,13 +8,13 @@ FIND_PACKAGE(PythonInterp REQUIRED)
 SET(Slicer_PYTHON_FILES
   slicer/__init__
   slicer/logic
-  slicer/mrml
-  slicer/mrmlLogic
-  slicer/teem
-  slicer/freesurfer
-  slicer/remoteio
   slicer/slicerqt
-  slicer/vtk/__init__
+  mrml
+  mrmlLogic
+  teem
+  freesurfer
+  remoteio
+  vtk/__init__
   )
 
 SET(Slicer_PYTHON_RESOURCES
