COMP: Added macro Slicer3_compile_python_scripts
Factored out CMake code from Base/Python/CMakeLists.txt for future re-use

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14580 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/Python/CMakeLists.txt
+++ b/Base/Python/CMakeLists.txt
@@ -1,11 +1,6 @@
-#
-# Based on ParaView/VTK/Utilities/vtkTclTest2Py/CMakeLists.txt and
-#          ParaView/VTK/Wrapping/Python/CMakeLists.txt
-#
 
-FIND_PACKAGE(PythonInterp REQUIRED)
 
-SET(Slicer_PYTHON_FILES
+SET(Slicer_PYTHON_SCRIPTS
   slicer/__init__
   slicer/logic
   slicer/slicerqt
@@ -21,7 +16,7 @@ SET(Slicer_PYTHON_RESOURCES
   )
   
 IF(Slicer3_USE_PYTHONQT_WITH_TCL)
-  LIST(APPEND Slicer_PYTHON_FILES 
+  LIST(APPEND Slicer_PYTHON_SCRIPTS
     tpycl/__init__
     tpycl/tpycl
     )
@@ -30,56 +25,13 @@ IF(Slicer3_USE_PYTHONQT_WITH_TCL)
     )
 ENDIF()
 
-SET(copied_python_files)
-
-SET(Slicer_PYTHON_MODULE_BINARY_DIR "${Slicer3_BINARY_DIR}/bin/Python")
-
-FOREACH(file ${Slicer_PYTHON_FILES})
-  SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${file}.py")
-  SET(tgt "${Slicer_PYTHON_MODULE_BINARY_DIR}/${file}.py")
-  SET(copied_python_files ${copied_python_files} ${tgt})
-  ADD_CUSTOM_COMMAND(DEPENDS ${src}
-                      COMMAND ${CMAKE_COMMAND} -E copy ${src} ${tgt}
-                      OUTPUT ${tgt}
-                      COMMENT "source copy")
-ENDFOREACH(file)
-
-FOREACH(file ${Slicer_PYTHON_RESOURCES})
-  SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${file}")
-  SET(tgt "${Slicer_PYTHON_MODULE_BINARY_DIR}/${file}")
-  SET(copied_python_files ${copied_python_files} ${tgt})
-  ADD_CUSTOM_COMMAND(DEPENDS ${src}
-                      COMMAND ${CMAKE_COMMAND} -E copy ${src} ${tgt}
-                      OUTPUT ${tgt}
-                      COMMENT "resource copy")
-ENDFOREACH(file)
-
-ADD_CUSTOM_TARGET(CopyPythonFiles
-                  ALL
-                  DEPENDS ${copied_python_files})
-
-
-# Byte compile the Python files.
-SET(compile_all_script "${CMAKE_CURRENT_BINARY_DIR}/compile_all_slicer.py")
-CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/compile_all_slicer.py.in"
-               ${compile_all_script}
-               @ONLY IMMEDIATE)
-
-ADD_CUSTOM_COMMAND(
-  COMMAND ${PYTHON_EXECUTABLE}
-  ARGS  "${compile_all_script}"
-  DEPENDS ${copied_python_files}  ${compile_all_script}
-  OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/slicer_python_compile_complete"
+Slicer3_compile_python_scripts(
+  TARGET_NAME slicer
+  SCRIPTS "${Slicer_PYTHON_SCRIPTS}"
+  RESOURCES "${Slicer_PYTHON_RESOURCES}"
+  DESTINATION_DIR ${Slicer3_BINARY_DIR}/bin/Python
+  INSTALL_DIR ${Slicer3_INSTALL_BIN_DIR}
   )
-
-ADD_CUSTOM_TARGET(slicer_pyc ALL
-  DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/slicer_python_compile_complete")
-
-
-# Install the slicer python module directory
-INSTALL(DIRECTORY "${Slicer3_BINARY_DIR}/bin/Python"
-  DESTINATION "${Slicer3_INSTALL_BIN_DIR}" COMPONENT Runtime
-  USE_SOURCE_PERMISSIONS)
 
 #-----------------------------------------------------------------------------
 # Testing
