ENH: Added vtkMRMLScriptedDisplayableManager class
Since it's not possible to derive a VTK class in python (and for that same
reason rely on polymorphism), the vtkMRMLScriptedDisplayableManager C++
class is a "proxy" allowing to interface a DisplayableManager written in python.

A scripted DisplayableManager should expose the following methods:
   - Create
   - GetMRMLSceneEventsToObserve
   - ProcessMRMLEvents
   - RemoveMRMLObservers
   - UpdateFromMRML
   - OnInteractorStyleEvent
   - OnMRMLDisplayableNodeModifiedEvent

In addition to register vtk class names, the MRMLDisplayableManager factory
can now register scripted displayableManager represented by a path
to a python script ending with ".py".

qSlicerLayoutManager now provide method setScriptedDisplayableManagerDirectory
allowing to set from which directory the scripted displayableManager
should be "sourced" from.
Similarly, the code in qMRMLSliceWidget and qMRMLThreeDView allowing to
register the displayableManager have been factored out into a method named:
 - registerDisplayableManagers(const QString& scriptedDisplayableManagerDirectory);


Below are more details explaining how a scripted displayable manager could
be implemented:
 The constructor has one parameter named 'parent' corresponding to the associated instance of
 vtkScriptedDisplayableManager in the C++ world.

 The python methods listed above corresponds to the implementation of the virtual method
 available in vtkScriptedDisplayableManager.

 The only exception is the virtual method SetMRMLSceneInternal, the python class only needs to
 implement the method GetMRMLSceneEventsToObserve. This later one just return a list of integer
 representing the eventid to observe.

 It's also possible to access the API of the associated C++ instance using the self.Parent
 For example:
   self.Parent.RemoveInteractorStyleObservableEvent(26) # vtkCommand::MouseWheelForwardEvent

 Make also sure NOT to call the corresponding C++ method from it's python equivale

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -15,6 +15,11 @@ SET(include_dirs
   ${MRMLLogic_SOURCE_DIR}
   ${MRMLLogic_BINARY_DIR}
   )
+IF(Slicer3_USE_PYTHONQT)
+  LIST(APPEND include_dirs
+    ${PYTHON_INCLUDE_DIR}
+    )
+ENDIF()
 
 SET(packages
   MRML
@@ -85,6 +90,16 @@ SET(KIT_SRCS
   vtkThreeDViewInteractorStyle.cxx
   )
 
+IF(VTK_WRAP_PYTHON)
+  LIST(APPEND KIT_SRCS
+    vtkMRMLScriptedDisplayableManager.cxx
+    )
+  SET_SOURCE_FILES_PROPERTIES(
+    vtkMRMLScriptedDisplayableManager.cxx
+    WRAP_EXCLUDE
+    )
+ENDIF()
+
 # Create the instantiator for DisplayableManager classes.
 SET(VTK_USE_INSTANTIATOR_NEW 1)
 VTK_MAKE_INSTANTIATOR3("${PROJECT_NAME}Instantiator"
@@ -124,6 +139,13 @@ SET(libs
   MRML
   MRMLLogic
   )
+
+IF(VTK_WRAP_PYTHON)
+  LIST(APPEND libs
+    vtkCommonPythonD # For vtkPythonUtils
+    ${PYTHON_LIBRARY} # At some point, VTK should be updated to expose VTK_PYTHON_LIBRARY
+    )
+ENDIF()
 
 TARGET_LINK_LIBRARIES(${lib_name}
   ${libs}
@@ -196,8 +218,10 @@ IF(VTK_WRAP_PYTHON AND BUILD_SHARED_LIBS)
     LIBRARY DESTINATION lib/${PROJECT_NAME} COMPONENT RuntimeLibraries
     ARCHIVE DESTINATION lib/${PROJECT_NAME} COMPONENT Development)
 
+  ADD_SUBDIRECTORY(Python)
+
 ENDIF(VTK_WRAP_PYTHON AND BUILD_SHARED_LIBS)
- 
+
 # --------------------------------------------------------------------------
 # Testing
 
