--- a/Libs/MRMLDisplayableManager/vtkMRMLDisplayableManagerConfigure.h.in
+++ b/Libs/MRMLDisplayableManager/vtkMRMLDisplayableManagerConfigure.h.in
@@ -7,6 +7,7 @@
 #pragma warning ( disable : 4275 )
 #endif
 
+#cmakedefine MRMLDisplayableManager_USE_PYTHON
 #cmakedefine BUILD_SHARED_LIBS
 #ifndef BUILD_SHARED_LIBS
 #define VTKMRMLDisplayableManager_STATIC
