ENH: BiDimensional measurements work now.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14594 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/Annotation/CMakeLists.txt
+++ b/QTModules/Annotation/CMakeLists.txt
@@ -28,6 +28,7 @@ SET(DisplayableManager_SRCS
   MRMLDisplayableManager/vtkMRMLAnnotationAngleDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationSplineDisplayableManager.cxx  
   MRMLDisplayableManager/vtkMRMLAnnotationRulerDisplayableManager.cxx   
+  MRMLDisplayableManager/vtkMRMLAnnotationBidimensionalDisplayableManager.cxx     
   MRMLDisplayableManager/vtkMRMLAnnotationDisplayableManager.cxx
   MRMLDisplayableManager/vtkMRMLAnnotationClickCounter.cxx
   )
