COMP: stub out qMRMLWidgets PythonQt for now until windows 'line too long' issue is resolved
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14602 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -119,8 +119,12 @@ IF(Slicer3_USE_PYTHONQT)
     CTKScriptingPythonWidgets
     CTKWidgetsPythonQt
     CTKVisualizationVTKWidgetsPythonQt
-    qMRMLWidgetsPythonQt
     )
+  IF(qMRMLWidgets_WRAP_PYTHON)
+    LIST(APPEND KIT_target_libraries
+      qMRMLWidgetsPythonQt
+    )
+  ENDIF()
 ENDIF()
 
 # Resources
