COMP: slicerqt.py - Factored out code specific to TCL layer into slicerqt-with-tcl.py
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14605 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/Python/CMakeLists.txt
+++ b/Base/Python/CMakeLists.txt
@@ -17,6 +17,7 @@ SET(Slicer_PYTHON_RESOURCES
   
 IF(Slicer3_USE_PYTHONQT_WITH_TCL)
   LIST(APPEND Slicer_PYTHON_SCRIPTS
+    slicer/slicerqt-with-tcl
     tpycl/__init__
     tpycl/tpycl
     )
