COMP: fix link path (needed on windows)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14619 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/CMakeLists.txt
+++ b/Base/QTGUI/CMakeLists.txt
@@ -119,6 +119,7 @@ IF(Slicer3_USE_PYTHONQT)
     CTKScriptingPythonWidgets
     CTKWidgetsPythonQt
     CTKVisualizationVTKWidgetsPythonQt
+    ${PYTHONQT_LIBRARY}
     )
   IF(qMRMLWidgets_WRAP_PYTHON)
     LIST(APPEND KIT_target_libraries
