COMP: link with python qt to when building with pythonqt enabled (required on windows)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14629 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/CMakeLists.txt
+++ b/Base/QTCore/CMakeLists.txt
@@ -83,6 +83,7 @@ IF(Slicer3_USE_PYTHONQT)
 
   LIST(APPEND KIT_target_libraries
     CTKScriptingPythonCore
+    ${PYTHONQT_LIBRARY}
     vtkCommonPythonD # For vtkPythonUtils
     )
   # Sources
