ENH: EMSegment - Added qSlicerEMSegmentInputChannelListWidget
See http://wiki.na-mic.org/Wiki/index.php/Projects:ARRA:SlicerEM:Developer:WidgetsToPort#DynamicListOfInputChannel

git-svn-id: http://svn.slicer.org/Slicer3/trunk@14634 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/EMSegment/CMakeLists.txt
+++ b/QTModules/EMSegment/CMakeLists.txt
@@ -27,11 +27,14 @@ SET(widget_SRCS
   Widgets/qSlicerEMSegmentWidget.h
   Widgets/qSlicerEMSegmentAnatomicalTreeWidget.cxx
   Widgets/qSlicerEMSegmentAnatomicalTreeWidget.h
+  Widgets/qSlicerEMSegmentInputChannelListWidget.cxx
+  Widgets/qSlicerEMSegmentInputChannelListWidget.h
   )
 
 SET(widget_MOC_SRCS
   Widgets/qSlicerEMSegmentWidget.h
   Widgets/qSlicerEMSegmentAnatomicalTreeWidget.h
+  Widgets/qSlicerEMSegmentInputChannelListWidget.h
   )
 
 # Panel source files
