COMP: reapply link issue resolution for windows only
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14639 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCore/CMakeLists.txt
+++ b/Base/QTCore/CMakeLists.txt
@@ -85,6 +85,14 @@ IF(Slicer3_USE_PYTHONQT)
     CTKScriptingPythonCore
     vtkCommonPythonD # For vtkPythonUtils
     )
+  IF(WIN32)
+    # TODO: this resolves link errors on windows, but shouldn't be
+    # needed - issue may lie with ctk external library macros?
+    LIST(APPEND KIT_target_libraries
+      ${PYTHONQT_LIBRARY}
+      )
+  ENDIF(WIN32)
+
   # Sources
   LIST(APPEND KIT_SRCS
     qSlicerCorePythonManager.cxx
