BUG: Fixed compile error on Linux 64
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14655 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRMLDisplayableManager/CMakeLists.txt
+++ b/Libs/MRMLDisplayableManager/CMakeLists.txt
@@ -90,6 +90,13 @@ SET(KIT_SRCS
   vtkSliceViewInteractorStyle.cxx
   vtkThreeDViewInteractorStyle.cxx
   )
+SET_SOURCE_FILES_PROPERTIES(
+  vtkMRMLDisplayableManagerGroup.cxx
+  vtkMRMLDisplayableManagerFactory.cxx
+  vtkMRMLThreeDViewDisplayableManagerFactory.cxx
+  vtkMRMLSliceViewDisplayableManagerFactory.cxx
+  WRAP_EXCLUDE
+)
 
 IF(MRMLDisplayableManager_USE_PYTHON)
   LIST(APPEND KIT_SRCS
