ENH: Fix the command line module parameter sets
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14661 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCLI/CMakeLists.txt
+++ b/Base/QTCLI/CMakeLists.txt
@@ -43,6 +43,7 @@ SET(KIT_SRCS
 SET(KIT_MOC_SRCS
   qSlicerCLIModuleWidget.h
   qSlicerCLIModuleWidget_p.h
+  qSlicerCLIModuleUIHelper.h
   )
 
 # UI files
